frontend/src/components/navbar/NavBar.css
@import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');

.nav-bar {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem 5%;
    gap: 5%;
    position: relative;
}

.nav-bar-heading {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    width: 100%;
    height: 100%;
    padding: 2%;
    /* border: 2px black solid; */
}

.nav-bar-heading h1 {
    font-size: 7rem;
    font-family: "Newsreader", "serif";
    text-transform: uppercase;
    font-style: normal;
    margin: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    /* align-self: start; */
}

.nav-bar-heading h1::before {
    content: "";
    position: absolute;
    top: 10%;
    left: 0;
    width: 100%;
    height: 2px;
    background-color: black;
}
.nav-bar-heading h1::after {
    content: "";
    position: absolute;
    top: 70%;
    left: 0;
    width: 100%;
    height: 2px;
    background-color: black;
}


.nav-crest {
    width: 80px;
    height: auto;
    object-fit: contain;
    transform: translateY(-20%);
}


/* Mobile styles */
@media screen and (max-width: 900px) {
    .nav-bar {
        padding: 1rem 5%;
    }

    .nav-bar-heading {
        gap: 1rem;
    }

    .nav-bar-heading h1 {
        font-size: 2.5rem;
    }

    .nav-crest {
        width: 40px;
    }
}

/* Small mobile devices */
@media screen and (max-width: 480px) {
    .nav-bar-heading h1 {
        font-size: 2rem;
    }

    .nav-crest {
        width: 30px;
    }
}

